--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.1.1",
+    "react-animations": "^1.0.0",
+    "react-d3-tree": "^1.8.0",
     "react-dom": "^16.1.1",
+    "react-parallax": "^1.6.0",
     "react-router-dom": "^4.2.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0"
