--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "radium": "^0.21.2",
     "react": "^16.1.1",
     "react-animations": "^1.0.0",
     "react-d3-tree": "^1.8.0",
