--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.1.1",
     "react-parallax": "^1.6.0",
     "react-router-dom": "^4.2.2",
+    "react-scrollable-anchor": "^0.5.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0"
   },
