--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-parallax": "^1.6.0",
     "react-router-dom": "^4.2.2",
     "react-scrollable-anchor": "^0.5.0",
+    "recharts": "^1.0.0-beta.10",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0"
   },
