--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "radium": "^0.21.2",
     "react": "^16.1.1",
     "react-animations": "^1.0.0",
+    "react-countup": "^3.0.2",
     "react-d3-tree": "^1.8.0",
     "react-dom": "^16.1.1",
     "react-parallax": "^1.6.0",
