--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flexboxgrid": "^6.3.1",
     "radium": "^0.21.2",
     "react": "^16.1.1",
     "react-animations": "^1.0.0",
+    "react-blur-image-loader": "^0.2.2",
     "react-countup": "^3.0.2",
     "react-d3-tree": "^1.8.0",
     "react-dom": "^16.1.1",
+    "react-graph-vis": "^1.0.2",
     "react-parallax": "^1.6.0",
+    "react-plx": "^1.1.2",
     "react-router-dom": "^4.2.2",
     "react-scrollable-anchor": "^0.5.0",
     "recharts": "^1.0.0-beta.10",
