--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-parallax": "^1.6.0",
     "react-plx": "^1.1.2",
     "react-router-dom": "^4.2.2",
+    "react-waypoint": "^8.0.1",
     "recharts": "^1.0.0-beta.10",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0"
